test/conformance/chainsaw/cel/http/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-cel-http
